# v4l2_camera_diagnostic

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  README.md  commitlint.config.cjs  installation.sh  uninstallation.sh
.githooks/: commit-msg  pre-commit  pre-push
.github/workflows/: ci.yml
docs/: architecture.md  ci.md  roadmap.md  testing.md
docs/backend/: hardware-validation.md
docs/backend/tests/: t01-device-compliance.md  t01-no-streamon.md  t02-buffer-overwrite.md  t02-control-inventory.md  t03-gpio-latency.md  t03-no-streamon.md  t04-nonblock-vs-block.md  t04-pollerr-handling.md  t05-poll-timeout-effect.md  t05-stream-cycles.md  t06-format-comparison.md  t06-multi-buffer.md  t07-buffer-overwrite.md  t07-poll-timeout-sweep.md  t08-buffer-recycling.md  t08-sequence-continuity.md  t09-buffer-flags.md  t09-sustained-capture.md  t10-memory-throughput.md  t10-multi-buffer.md  t11-buffer-recycling.md  t11-dmabuf-cache-sync.md  t12-poll-timeout-cliff.md  t12-stream-cycles.md  t13-buffer-flags.md  t13-trigger-latency.md  t14-nonblock-vs-block.md  t14-timestamp-monotonicity.md  t15-gpio-pulse-width.md  t15-memory-throughput.md  t16-format-comparison.md  t16-v4l2-compliance.md  t17-control-sweep.md  t17-pollerr-handling.md  t18-dmabuf-cache-sync.md  t18-resolution-sweep.md  t19-gpio-pulse-width.md  t19-sequence-continuity.md  t20-camera-controls.md  t20-timestamp-monotonicity.md  (+9 more)
docs/development/: cli.md
docs/frontend/: web-ui.md
docs/guides/: configuration.md  installation.md  reports.md  uninstallation.md
scripts/: install-git-hooks.sh  setup-dev-env.sh
scripts/dev/: check-cpp-format.sh  check-md-lint.sh
source/backend/cli/include/v4l2diag/cli/: cli_main.hpp  web_main.hpp
source/backend/cli/src/: main.cpp  web_main.cpp
source/backend/core/include/v4l2diag/core/: diagnostic_runner.hpp  profile_registry.hpp  report_writer.hpp  stats.hpp  test_registry.hpp  threshold_registry.hpp  types.hpp
source/backend/core/src/: diagnostic_runner.cpp  profile_registry.cpp  report_writer.cpp  stats.cpp  test_registry.cpp  threshold_registry.cpp  types.cpp
source/backend/hw/include/v4l2diag/hw/: device_discovery.hpp  gpio_trigger.hpp  trigger_source.hpp  v4l2_capture.hpp  v4l2_controls.hpp
source/backend/hw/src/: device_discovery.cpp  gpio_trigger.cpp  trigger_source.cpp  v4l2_capture.cpp  v4l2_controls.cpp
source/backend/web/include/v4l2diag/web/: web_server.hpp
source/backend/web/src/: web_server.cpp
source/frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json
source/frontend/src/: App.tsx  api.ts  main.tsx  styles.css  theme.ts  types.ts
source/frontend/src/components/: ConfirmDialog.tsx  InfoPopover.tsx  ResultsTable.tsx  SelectableCard.tsx  Sidebar.tsx  StatTile.tsx  ThemeToggle.tsx  Toast.tsx
source/frontend/src/hooks/: useConfirmDialog.ts  useRunPolling.ts
source/frontend/src/pages/: CameraSelectionPage.tsx  DashboardPage.tsx  LiveOutputPage.tsx  ProfileSelectionPage.tsx  ReportFormatsPage.tsx  ResultsPage.tsx  TestSelectionPage.tsx  ThresholdConfigPage.tsx
source/frontend/src/styles/: theme.css
source/frontend/tests/: trigger-routing.spec.ts
tests/: profile_registry_test.cpp  report_writer_test.cpp  stats_test.cpp  trigger_model_test.cpp
